# magic_eye

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
M2_anatomy/: README.md
M5_oracle/: README.md
docs/legacy/: README.md  final_README.md
docs/legacy/M0_passport/: README.md  main.cpp
docs/legacy/M1_xray/: README.md  main.cpp
docs/legacy/M2_anatomy/: main.cpp
docs/legacy/M3_vptr_lair/: README.md  main.cpp
docs/legacy/M4_guild_registry/: README.md  main.cpp
docs/legacy/M5_oracle/: oracle.sh  probe.cpp
docs/spec/: 01_vision_ux.md  02_architecture.md  03_model_navgraph.md  04_tui_platform.md  05_roadmap_acceptance.md  README.md
examples/: 01_scalars_and_pointers.cpp  02_aggregates_and_padding.cpp  03_std_types.cpp  04_registry_private.cpp  05_single_inheritance.cpp  06_polymorphism.cpp  07_multiple_inheritance.cpp  08_diamond_inheritance.cpp  09_crtp_static.cpp  10_deep_gaze.cpp  11_explorer.cpp
final/: README.md  magic_eye.hpp
final/examples/: 01_basics.cpp  02_creatures.cpp  03_tavern_vtable.cpp  04_guild_registry.cpp  05_deep_gaze.cpp
final/eye/: reflect.hpp  render.hpp
include/eye/: explore.hpp  magic_eye.hpp  reflect.hpp  render.hpp
include/eye/detail/: abi.hpp  field_count.hpp  field_mark.hpp  frame.hpp  geometry.hpp  model_types.hpp  palette.hpp  panel_object.hpp  platform.hpp  reflect_impl.hpp  surface.hpp  text.hpp  traits.hpp  type_name.hpp  view_hierarchy.hpp  view_memory.hpp  view_passport.hpp  view_satellites.hpp  view_vtable.hpp
include/eye/detail/nav/: nav_build.hpp  nav_node.hpp  nav_session.hpp
include/eye/detail/tui/: app.hpp  canvas.hpp  keys.hpp  term.hpp
tests/: explore_script_tests.cpp  magic_eye_tests.cpp  tui_core_tests.cpp  tui_demo.cpp
tools/: eye-fullscreen.ps1  eyerun.sh
